[gd_scene load_steps=9 format=3 uid="uid://ccjjhy7xgxirk"]

[ext_resource type="Script" path="res://src/scene/object/pullable_pipe/PullablePipe.gd" id="1_tbb7u"]
[ext_resource type="Texture2D" uid="uid://c71e8hpbips73" path="res://src/resource/sprite/object/pipe/mouth_horiz.png" id="2_sd1kp"]
[ext_resource type="Texture2D" uid="uid://bcbqguydyf6ve" path="res://src/resource/sprite/object/pipe/mouth_vert.png" id="3_7dbb5"]
[ext_resource type="PackedScene" uid="uid://omrlx4fdn875" path="res://src/scene/object/pipe_transition/PipeTransition.tscn" id="4_opi6f"]
[ext_resource type="Texture2D" uid="uid://bf176jxej7cxb" path="res://src/resource/sprite/object/pipe/segment_horiz.png" id="4_ruovw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kk5kk"]
animations = [{
"center_offset_x": 0.0,
"center_offset_y": 0.0,
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_sd1kp")
}],
"loop": true,
"name": &"horizontal",
"speed": 5.0
}, {
"center_offset_x": 0.0,
"center_offset_y": 0.0,
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_7dbb5")
}],
"loop": true,
"name": &"vertical",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txy67"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kbspg"]
size = Vector2(32, 16)

[node name="PullablePipe" type="CharacterBody2D" node_paths=PackedStringArray("sprite")]
collision_layer = 68
collision_mask = 3
script = ExtResource("1_tbb7u")
type = 2
sprite = NodePath("MouthSprite")

[node name="MouthSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_kk5kk")
animation = &"horizontal"

[node name="MouthCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_txy67")

[node name="SegementContainer" type="StaticBody2D" parent="."]
z_index = -1
z_as_relative = false
collision_layer = 4
collision_mask = 3

[node name="SegementRect" type="TextureRect" parent="SegementContainer"]
offset_left = -16.0
offset_top = -8.0
offset_right = 16.0
offset_bottom = 8.0
texture = ExtResource("4_ruovw")
stretch_mode = 1

[node name="SegmentCollisionShape" type="CollisionShape2D" parent="SegementContainer"]
shape = SubResource("RectangleShape2D_kbspg")

[node name="PipeTransition" parent="." instance=ExtResource("4_opi6f")]
position = Vector2(-10, -24)
rotation = -1.5708
identifier = "B"
direction = 2
destination_level = "1-2"
destination_pipe = "A"
